style: repair settings z-index

--- a/src/components/ui.scss
+++ b/src/components/ui.scss
@@ -8,7 +8,7 @@
     font-size: 38px;
     font-weight: 600;
     text-shadow: 1px 1px 2px black;
-    z-index: 1;
+    z-index: 2;
   }
 
   &__settings {
@@ -21,6 +21,7 @@
     grid-template-columns: repeat(2, 1fr);
     width: 200px;
     gap: 15px;
+    z-index: 1;
   }
 
   &__button {
@@ -30,6 +31,7 @@
     text-align: center;
     bottom: 0;
     overflow: hidden;
+    z-index: 1;
 
     & > button {
       cursor: pointer;
